<resources>
    <string name="app_name">AndroMate</string>
    <string name="appId">1f0baa768f962c90a6346c6372678dce</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="gender">Your Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="noEvents">You don`t have any events for</string>
    <string name="splashString">App that makes your life easier</string>
    <string name="addEventButton">+</string>
    <string name="dateForEvent">Date</string>
    <string name="timeForEvent">Time</string>
    <string name="eventTitle">Title</string>
    <string name="eventDescription">Description</string>
    <string name="back">&lt;</string>
    <string name="next">&gt;</string>
    <string name="noConnection">No internet connection\n\nPlease turn on the internet and restart the app</string>
    <string name="noLocation">No GPS location\n\nPlease turn on the GPS and restart the app</string>
    <string name="languageSpinnerTitle">Language:</string>
    <string name="searchText">Search frase</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
