<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsFragment"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#a5a5c5"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/gender"
        android:textSize="22sp" />

    <RadioGroup
        android:layout_margin="10dp"
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:textColor="#FFFFFF"
            app:buttonTint="#FFFFFF"
            android:id="@+id/radioMan"
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <RadioButton
            android:textColor="#FFFFFF"
            app:buttonTint="#FFFFFF"
            android:id="@+id/radioWoman"
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />
    </RadioGroup>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/languageSpinnerTitle"
            android:textSize="22sp" />
        <Spinner
            android:layout_marginStart="10dp"
            android:id="@+id/languagesSpinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <EditText
        android:layout_margin="10dp"
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/searchText"
        android:inputType="textShortMessage"
        android:textColor="#FFFFFF"
        android:theme="@style/EditTextTheme"
        android:maxLength="60"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
    <Button
        android:id="@+id/saveButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <Button
            android:id="@+id/cancelSettingsButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </LinearLayout>


</LinearLayout>