<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#a5a5c5"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/gender"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:textColor="#FFFFFF"
            app:buttonTint="#FFFFFF"
            android:id="@+id/radioMan"
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <RadioButton
            android:textColor="#FFFFFF"
            app:buttonTint="#FFFFFF"
            android:id="@+id/radioWoman"
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />
    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />


</LinearLayout>